# fusen

./: README.md  meson.build
fusen/: main.cpp  scandirs.cpp  sql.cpp  utils.cpp
include/: mainwindow.h  scandirs.h  sql.h  utils.h
